feat: add presentations for Modules 1 to 7 of the Cursor AI course, covering topics from introduction to advanced AI orchestration and automation in development

--- a/Модуль 6. Продвинутое использование AI в Cursor/Урок 1. Prompt Engineering для разработчиков.md
+++ b/Модуль 6. Продвинутое использование AI в Cursor/Урок 1. Prompt Engineering для разработчиков.md
@@ -31,7 +31,12 @@
 2. Потом: _“Создай роуты для регистрации и логина”_.
 3. Далее: _“Напиши тесты для этих роутов”_.
 
-### **4. Практика: AI как собеседник (30:00 – 50:00)**
+### **4. MCP**
+##  **5. Что подключать через MCP**
+##  **6. Зачем User Rules**
+##  **7. Зачем Project Rules**
+
+### **8. Практика: AI как собеседник (30:00 – 50:00)**
 
 **Задание:**
 
@@ -39,7 +44,7 @@
 - Сначала просят AI переписать её “как получится”.
 - Потом дорабатывают запрос, пока результат не будет идеальным.
 
-### **5. Заключение (50:00 – 55:00)**
+### **9. Заключение (50:00 – 55:00)**
 
 **Говорим:**
 
